Add resource collection to recursive driver