@@ -1,13 +1,13 @@
-package se.leet.runner;
+package se.leet.util;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
-class FileUtil {
+public class FileUtil {
 
-    static void createFile(String url, String data) {
+    public static void createFile(String url, byte[] data) {
         String fileName = System.getProperty("user.home")
                 + File.separatorChar
                 + url.substring(7).replace('/', File.separatorChar);
@@ -16,7 +16,7 @@ class FileUtil {
         var file = new File(fileName);
         try {
             Files.createDirectories(Paths.get(file.getParentFile().getAbsolutePath()));
-            Files.writeString(Paths.get(file.getAbsolutePath()), data);
+            Files.write(Paths.get(file.getAbsolutePath()), data);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
